fixed the letter spacing on everything. for display = -1px, for regular body = 0px, and for cta's = 1px

--- a/src/routes/learn/posts/md.css
+++ b/src/routes/learn/posts/md.css
@@ -55,7 +55,7 @@ html body h1 {
 	font-size: clamp(2rem, 5vw, 8rem);
 	font-weight: 900;
 	color: var(--clr-pale);
-	letter-spacing: 5px;
+	letter-spacing: -1px;
 	margin-block: 2rem;
 	text-shadow: 0 0 3px var(--dark-gray);
 	filter: drop-shadow(0px 0px 0.25rem var(--white));
@@ -67,7 +67,7 @@ html body h2 {
 	font-size: clamp(1.5rem, 3vw, 2.5rem);
 	font-weight: 500;
 	color: var(--clr-blue);
-	letter-spacing: 2px;
+	letter-spacing: 0px;
 	margin-block: 1.5rem;
 }
 
@@ -77,5 +77,5 @@ html body p {
 	color: var(--clr-main);
 	line-height: 1.5;
 	margin-block: 1rem;
-	letter-spacing: 2px;
+	letter-spacing: 0px;
 }
